manifests/locust/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: harbor.lab.home/library/locust:1
          ports:
            - containerPort: 8089
