manifests/locust/service.yml
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: locust
spec:
  selector:
    app: locust
  ports:
    - name: locust
      protocol: TCP
      port: 8089
